2005-06-14  Miles Bader  <miles@gnu.org>

	* progmodes/ebrowse.el (ebrowse-tree-mark, ebrowse-root-class)
	(ebrowse-file-name, ebrowse-default, ebrowse-member-attribute)
	(ebrowse-member-class, ebrowse-progress):
	Remove "-face" suffix from face names.
	(ebrowse-tree-mark-face, ebrowse-root-class-face)
	(ebrowse-file-name-face, ebrowse-default-face)
	(ebrowse-member-attribute-face, ebrowse-member-class-face)
	(ebrowse-progress-face): 
	New backward-compatibility aliases for renamed faces.
	(ebrowse-show-progress, ebrowse-show-file-name-at-point)
	(ebrowse-set-mark-props, ebrowse-draw-tree-fn)
	(ebrowse-draw-member-buffer-class-line, ebrowse-draw-member-long-fn)
	(ebrowse-draw-member-short-fn): Use renamed ebrowse faces.

	* progmodes/antlr-mode.el (antlr-default, antlr-keyword, antlr-syntax)
	(antlr-ruledef, antlr-tokendef, antlr-ruleref, antlr-tokenref)
	(antlr-literal): Remove "-face" suffix and "font-lock-" from face
	names.
	(antlr-font-lock-default-face, antlr-font-lock-keyword-face)
	(antlr-font-lock-syntax-face, antlr-font-lock-ruledef-face)
	(antlr-font-lock-tokendef-face, antlr-font-lock-ruleref-face)
	(antlr-font-lock-tokenref-face, antlr-font-lock-literal-face):
	New backward-compatibility aliases for renamed faces.
	(antlr-default-face, antlr-keyword-face, antlr-syntax-face)
	(antlr-ruledef-face, antlr-tokendef-face, antlr-ruleref-face)
	(antlr-tokenref-face, antlr-literal-face): Variables renamed to remove
	"font-lock-".  Use renamed antlr-mode faces.
	(antlr-font-lock-additional-keywords): Use renamed faces.
	Replace literal face-names with face variable references.

	* buff-menu.el (Buffer-menu-buffer): Remove "-face" suffix from
	face name.
	(Buffer-menu-buffer-face): New backward-compatibility alias for
	renamed face.
	(list-buffers-noselect): Use renamed Buffer-menu-buffer face.

2005-06-15  Daniel Pfeiffer  <occitan@esperanto.org>

	* progmodes/make-mode.el (makefile-space, makefile-makepp-perl):
	Eliminate "-face" suffix.